--- a/roles/basic/tasks/main.yml
+++ b/roles/basic/tasks/main.yml
@@ -14,10 +14,9 @@
     - smartmontools
     - lm-sensors
     - unattended-upgrades
-    - unrar-free
+    - unrar
     #- p7zip
     #- p7zip-full
-  tags: install
 
 - name: OS  |  Make grub faster
   lineinfile:
@@ -25,4 +24,3 @@
     regexp: '^GRUB_TIMEOUT=10'
     line: GRUB_TIMEOUT=1
   notify: update-grub
-  tags: install
